Style des images

--- a/rapport/.vuepress/styles/index.styl
+++ b/rapport/.vuepress/styles/index.styl
@@ -2,3 +2,22 @@
   border: solid 1px #A2A2A2;
   padding: 15px;
 }
+
+img {
+  display: flex;
+  height: auto;
+  margin: auto;
+}
+
+img[alt="logo-vue"], img[alt="logo-lizmap"] {
+  max-width: 150px !important;
+}
+
+img[alt="logo-leaflet"] {
+  max-width 250px !important;
+}
+
+img[alt*="modal"] {
+  max-width 500px !important
+}
+
