Modification du contenu de SMC - Modifications et réécriture de certaines parties - Ajout d'images - Rédaction de la conclusion

--- a/rapport/.vuepress/styles/index.styl
+++ b/rapport/.vuepress/styles/index.styl
@@ -13,7 +13,7 @@ img[alt="logo-vue"], img[alt="logo-lizmap"] {
   max-width: 150px !important;
 }
 
-img[alt="logo-leaflet"] {
+img[alt="logo-leaflet"], img[alt="logo-qt"] {
   max-width 250px !important;
 }
 
