Style global - Modif taille tritres

--- a/rapport/.vuepress/styles/index.styl
+++ b/rapport/.vuepress/styles/index.styl
@@ -1,3 +1,23 @@
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
 .code-block {
   border: solid 1px #A2A2A2;
   padding: 15px;
